<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/default_20"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/image_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/woman_1" />

                <ImageView
                    android:id="@+id/heart_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/out_shadow"
                    android:src="@drawable/ic_unfavorite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_10"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">


                <TextView
                    android:id="@+id/first_name_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_woman_firstname"
                    android:textSize="23sp"
                    android:textColor="@color/black"
                    android:theme="@style/SubtitleTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/last_name_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/default_10"
                    android:text="@string/item_woman_lastname"
                    android:textSize="23sp"
                    android:textColor="@color/black"
                    android:theme="@style/SubtitleTextStyle"
                    app:layout_constraintStart_toEndOf="@+id/first_name_item"
                    app:layout_constraintTop_toTopOf="@+id/first_name_item" />

                <TextView
                    android:id="@+id/activity_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_page_activity_description"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:theme="@style/DefaultTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_item" />

                <TextView
                    android:id="@+id/nationality_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_page_nationality_description"
                    android:textColor="@color/black"
                    android:theme="@style/DefaultTextStyle"
                    app:layout_constraintStart_toStartOf="@+id/activity_item"
                    app:layout_constraintTop_toBottomOf="@+id/activity_item" />

                <TextView
                    android:id="@+id/birth_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_10"
                    android:text="@string/item_woman_birth"
                    android:textStyle="italic"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:theme="@style/DefaultTextStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:paddingTop="@dimen/default_20"
                    android:text="@string/item_woman_description"
                    android:textColor="@color/black"
                    android:theme="@style/DefaultTextStyle"
                    app:layout_constraintStart_toStartOf="@+id/nationality_item"
                    app:layout_constraintTop_toBottomOf="@+id/nationality_item" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>