<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="@dimen/default_10"
    android:layout_marginLeft="@dimen/default_10"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/planet_1" />

        </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/first_name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_10"
        android:text="@string/item_woman_firstname"
        android:textColor="@color/lightDark"
        android:textSize="17sp"
        android:theme="@style/SubtitleTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/cardView" />

    <TextView
        android:id="@+id/last_name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/default_10"
        android:theme="@style/SubtitleTextStyle"
        android:textSize="17sp"
        android:text="@string/item_woman_lastname"
        android:textColor="@color/lightDark"
        app:layout_constraintStart_toEndOf="@+id/first_name_item"
        app:layout_constraintTop_toTopOf="@+id/first_name_item" />

    <TextView
        android:id="@+id/activity_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_10"
        android:text="@string/popup_page_activity_description"
        android:textSize="13sp"
        android:textColor="@color/lightDark"
        android:theme="@style/DefaultTextStyle"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/first_name_item" />

    <ImageView
        android:id="@+id/heart_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_unfavorite"
        android:layout_marginRight="@dimen/default_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>