<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="5dp"
    android:layout_marginLeft="@dimen/default_10"
    app:cardCornerRadius="0dp"
    android:layout_width="150dp"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/woman_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/heart_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/default_10"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/corners_radius"
            android:src="@drawable/ic_unfavorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_10"
            android:paddingBottom="@dimen/default_10"
            android:background="@color/lightWhite"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/first_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_10"
                android:text="@string/item_woman_firstname"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:theme="@style/SubtitleTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/last_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/item_woman_lastname"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:theme="@style/SubtitleTextStyle"
                app:layout_constraintStart_toEndOf="@+id/first_name_item"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/birth_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/item_woman_birth"
                android:theme="@style/DefaultTextStyle"
                android:paddingLeft="@dimen/default_10"
                app:layout_constraintStart_toStartOf="@+id/first_name_item"
                app:layout_constraintTop_toBottomOf="@+id/first_name_item" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>